--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="please_enter_your_name">Please enter your name</string>
     <string name="start">Start</string>
     <string name="submit">Submit</string>
+    <string name="image">image</string>
+    <string name="result">Result</string>
+    <string name="finish">FINISH</string>
 </resources>
